microservices/frontente/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontente
spec:
  selector:
    app: frontente
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
